# RCMEA-RAG

./: .gitignore  README.md  pyproject.toml
src/rcmea_rag/: __init__.py  report_text_cleanup.py
src/rcmea_rag/steps/: __init__.py  step_01_policy_search.py  step_02_roi_route.py  step_03_rag_baselines.py  step_04_gate_ablation.py  step_05_evidence_summary.py
