[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcmea-rag"
version = "0.1.0"
description = "Public report-section utilities for RCMEA-RAG"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]
